variety of small changes: added comments to index.html, adjusted container structure and header behavior to better fit mobile-first suggestions, added shadow-test to title to make it pop, added suggestion to remove w3-margin for cleaner title lineup, added p-tag with id data-test for testing purposes, added container wrapper to 3 images in order to make the overall page line up better, fixed ALL links currently in master - they now account for asset folder and https protocol; personally, fixed virus tracker apis - global timeline loads WAY too much info to use effectively, but others now display properly. Notably, values returned from country timeline are now stored in arrays for use with Sam's graph api/program; note: I made one change to nyt-scraper.js, which was to update your http to https - lacking that s can throw an error when published to github pages, apparently

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,18 +2,24 @@
   background-image: url(https://www.elsevier.com/__data/assets/image/0012/974739/coronavirus-image-iStock-628925532-full-width-wide.jpg);
   height: 200px;
   background-repeat: no-repeat;
+  background-color: black;
+  background-position-x: center;
 }
 
 h1, h3 {
   text-align: center;
 }
 
+#text-outline {
+  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 2px #000, -1px -1px 2px #000; 
+}
+
 .info-box {
   box-sizing: border-box;
-/* }
-footer {
+}
+  footer {
   display: block;
   background-color: gray;
   padding-bottom: 0%;
   padding-top: 12px;
-} */
+}
